<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/details_options_edit"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/details_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/details_options_delete"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/details_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/details_options_history"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/portfolio_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/details_options_settings"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>