<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/lists_options_create"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/lists_create_new"
        app:showAsAction="never" />

    <item
        android:id="@+id/lists_options_edit"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/lists_edit_existing"
        app:showAsAction="never" />

    <item
        android:id="@+id/lists_options_delete"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/lists_delete_existing"
        app:showAsAction="never" />

    <item
        android:id="@+id/lists_options_settings"
        android:icon="@drawable/ic_launcher_foreground"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>